lib/core/ffi/litert_lm_bindings.dart


  ffi.Pointer<LiteRtLmJsonResponse> litert_lm_conversation_send_message(
    ffi.Pointer<LiteRtLmConversation> conversation,
    ffi.Pointer<ffi.Char> message_json,
    ffi.Pointer<ffi.Char> extra_context,
    ffi.Pointer<LiteRtLmConversationOptionalArgs> optional_args,
  ) {
    return _litert_lm_conversation_send_message(
      conversation,
      message_json,
      extra_context,
      optional_args,
    );
  }

  late final _litert_lm_conversation_send_messagePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmJsonResponse> Function(
                  ffi.Pointer<LiteRtLmConversation>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<LiteRtLmConversationOptionalArgs>)>>(
      'litert_lm_conversation_send_message');
  late final _litert_lm_conversation_send_message =
      _litert_lm_conversation_send_messagePtr.asFunction<
          ffi.Pointer<LiteRtLmJsonResponse> Function(
              ffi.Pointer<LiteRtLmConversation>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<LiteRtLmConversationOptionalArgs>)>();

  void litert_lm_json_response_delete(
    ffi.Pointer<LiteRtLmJsonResponse> response,
  ) {
    return _litert_lm_json_response_delete(
      response,
    );
  }

  late final _litert_lm_json_response_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmJsonResponse>)>>(
      'litert_lm_json_response_delete');
  late final _litert_lm_json_response_delete =
      _litert_lm_json_response_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmJsonResponse>)>();

  ffi.Pointer<ffi.Char> litert_lm_json_response_get_string(
    ffi.Pointer<LiteRtLmJsonResponse> response,
  ) {
    return _litert_lm_json_response_get_string(
      response,
    );
  }

  late final _litert_lm_json_response_get_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<LiteRtLmJsonResponse>)>>(
      'litert_lm_json_response_get_string');
  late final _litert_lm_json_response_get_string =
      _litert_lm_json_response_get_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LiteRtLmJsonResponse>)>();

  int litert_lm_conversation_send_message_stream(
    ffi.Pointer<LiteRtLmConversation> conversation,
    ffi.Pointer<ffi.Char> message_json,
    ffi.Pointer<ffi.Char> extra_context,
    ffi.Pointer<LiteRtLmConversationOptionalArgs> optional_args,
    LiteRtLmStreamCallback callback,
    ffi.Pointer<ffi.Void> callback_data,
  ) {
    return _litert_lm_conversation_send_message_stream(
      conversation,
      message_json,
      extra_context,
      optional_args,
      callback,
      callback_data,
    );
  }

  late final _litert_lm_conversation_send_message_streamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<LiteRtLmConversation>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<LiteRtLmConversationOptionalArgs>,
                  LiteRtLmStreamCallback,
                  ffi.Pointer<ffi.Void>)>>(
      'litert_lm_conversation_send_message_stream');
  late final _litert_lm_conversation_send_message_stream =
      _litert_lm_conversation_send_message_streamPtr.asFunction<
          int Function(
              ffi.Pointer<LiteRtLmConversation>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<LiteRtLmConversationOptionalArgs>,
              LiteRtLmStreamCallback,
              ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> litert_lm_conversation_render_message_to_string(
    ffi.Pointer<LiteRtLmConversation> conversation,
    ffi.Pointer<ffi.Char> message_json,
  ) {
    return _litert_lm_conversation_render_message_to_string(
      conversation,
      message_json,
    );
  }

  late final _litert_lm_conversation_render_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<LiteRtLmConversation>, ffi.Pointer<ffi.Char>)>>(
      'litert_lm_conversation_render_message_to_string');
  late final _litert_lm_conversation_render_message_to_string =
      _litert_lm_conversation_render_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<LiteRtLmConversation>, ffi.Pointer<ffi.Char>)>();

  void litert_lm_conversation_cancel_process(
    ffi.Pointer<LiteRtLmConversation> conversation,
  ) {
    return _litert_lm_conversation_cancel_process(
      conversation,
    );
  }

  late final _litert_lm_conversation_cancel_processPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversation>)>>(
      'litert_lm_conversation_cancel_process');
  late final _litert_lm_conversation_cancel_process =
      _litert_lm_conversation_cancel_processPtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmConversation>)>();

  ffi.Pointer<LiteRtLmBenchmarkInfo> litert_lm_conversation_get_benchmark_info(
    ffi.Pointer<LiteRtLmConversation> conversation,
  ) {
    return _litert_lm_conversation_get_benchmark_info(
      conversation,
    );
  }

  late final _litert_lm_conversation_get_benchmark_infoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmBenchmarkInfo> Function(
                  ffi.Pointer<LiteRtLmConversation>)>>(
      'litert_lm_conversation_get_benchmark_info');
  late final _litert_lm_conversation_get_benchmark_info =
      _litert_lm_conversation_get_benchmark_infoPtr.asFunction<
          ffi.Pointer<LiteRtLmBenchmarkInfo> Function(
              ffi.Pointer<LiteRtLmConversation>)>();

  ffi.Pointer<LiteRtLmTokenizeResult> litert_lm_engine_tokenize(
    ffi.Pointer<LiteRtLmEngine> engine,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _litert_lm_engine_tokenize(
      engine,
      text,
    );
  }

  late final _litert_lm_engine_tokenizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmTokenizeResult> Function(
              ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<ffi.Char>)>>('litert_lm_engine_tokenize');
  late final _litert_lm_engine_tokenize =
      _litert_lm_engine_tokenizePtr.asFunction<
          ffi.Pointer<LiteRtLmTokenizeResult> Function(
              ffi.Pointer<LiteRtLmEngine>, ffi.Pointer<ffi.Char>)>();

  void litert_lm_tokenize_result_delete(
    ffi.Pointer<LiteRtLmTokenizeResult> result,
  ) {
    return _litert_lm_tokenize_result_delete(
      result,
    );
  }

  late final _litert_lm_tokenize_result_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmTokenizeResult>)>>(
      'litert_lm_tokenize_result_delete');
  late final _litert_lm_tokenize_result_delete =
      _litert_lm_tokenize_result_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmTokenizeResult>)>();

  ffi.Pointer<ffi.Int> litert_lm_tokenize_result_get_tokens(
    ffi.Pointer<LiteRtLmTokenizeResult> result,
  ) {
    return _litert_lm_tokenize_result_get_tokens(
      result,
    );
  }

  late final _litert_lm_tokenize_result_get_tokensPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Int> Function(
                  ffi.Pointer<LiteRtLmTokenizeResult>)>>(
      'litert_lm_tokenize_result_get_tokens');
  late final _litert_lm_tokenize_result_get_tokens =
      _litert_lm_tokenize_result_get_tokensPtr.asFunction<
          ffi.Pointer<ffi.Int> Function(ffi.Pointer<LiteRtLmTokenizeResult>)>();

  int litert_lm_tokenize_result_get_num_tokens(
    ffi.Pointer<LiteRtLmTokenizeResult> result,
  ) {
    return _litert_lm_tokenize_result_get_num_tokens(
      result,
    );
  }

  late final _litert_lm_tokenize_result_get_num_tokensPtr = _lookup<
          ffi.NativeFunction<
              ffi.Size Function(ffi.Pointer<LiteRtLmTokenizeResult>)>>(
      'litert_lm_tokenize_result_get_num_tokens');
  late final _litert_lm_tokenize_result_get_num_tokens =
      _litert_lm_tokenize_result_get_num_tokensPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmTokenizeResult>)>();

  ffi.Pointer<LiteRtLmDetokenizeResult> litert_lm_engine_detokenize(
    ffi.Pointer<LiteRtLmEngine> engine,
    ffi.Pointer<ffi.Int> tokens,
    int num_tokens,
  ) {
    return _litert_lm_engine_detokenize(
      engine,
      tokens,
      num_tokens,
    );
  }

  late final _litert_lm_engine_detokenizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmDetokenizeResult> Function(
              ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<ffi.Int>,
              ffi.Size)>>('litert_lm_engine_detokenize');
  late final _litert_lm_engine_detokenize =
      _litert_lm_engine_detokenizePtr.asFunction<
          ffi.Pointer<LiteRtLmDetokenizeResult> Function(
              ffi.Pointer<LiteRtLmEngine>, ffi.Pointer<ffi.Int>, int)>();

  void litert_lm_detokenize_result_delete(
    ffi.Pointer<LiteRtLmDetokenizeResult> result,
  ) {
    return _litert_lm_detokenize_result_delete(
      result,
    );
  }

  late final _litert_lm_detokenize_result_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmDetokenizeResult>)>>(
      'litert_lm_detokenize_result_delete');
  late final _litert_lm_detokenize_result_delete =
      _litert_lm_detokenize_result_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmDetokenizeResult>)>();

  ffi.Pointer<ffi.Char> litert_lm_detokenize_result_get_string(
    ffi.Pointer<LiteRtLmDetokenizeResult> result,
  ) {
    return _litert_lm_detokenize_result_get_string(
      result,
    );
  }

  late final _litert_lm_detokenize_result_get_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<LiteRtLmDetokenizeResult>)>>(
      'litert_lm_detokenize_result_get_string');
  late final _litert_lm_detokenize_result_get_string =
      _litert_lm_detokenize_result_get_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<LiteRtLmDetokenizeResult>)>();

  void litert_lm_token_union_delete(
    ffi.Pointer<LiteRtLmTokenUnion> token_union,
  ) {
    return _litert_lm_token_union_delete(
      token_union,
    );
  }

  late final _litert_lm_token_union_deletePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmTokenUnion>)>>(
      'litert_lm_token_union_delete');
  late final _litert_lm_token_union_delete = _litert_lm_token_union_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmTokenUnion>)>();

  LiteRtLmTokenUnionType litert_lm_token_union_get_type(
    ffi.Pointer<LiteRtLmTokenUnion> token_union,
  ) {
    return LiteRtLmTokenUnionType.fromValue(_litert_lm_token_union_get_type(
      token_union,
    ));
  }

  late final _litert_lm_token_union_get_typePtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(ffi.Pointer<LiteRtLmTokenUnion>)>>(
      'litert_lm_token_union_get_type');
  late final _litert_lm_token_union_get_type =
      _litert_lm_token_union_get_typePtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmTokenUnion>)>();

  ffi.Pointer<ffi.Char> litert_lm_token_union_get_string(
    ffi.Pointer<LiteRtLmTokenUnion> token_union,
  ) {
    return _litert_lm_token_union_get_string(
      token_union,
    );
  }

  late final _litert_lm_token_union_get_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<LiteRtLmTokenUnion>)>>(
      'litert_lm_token_union_get_string');
  late final _litert_lm_token_union_get_string =
      _litert_lm_token_union_get_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LiteRtLmTokenUnion>)>();
